--- a/Interfaz/rtc.ui
+++ b/Interfaz/rtc.ui
@@ -25,21 +25,21 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QGraphicsView" name="graphicsView"/>
+      <widget class="QGraphicsView" name="graphViewSrc1"/>
      </item>
      <item row="3" column="1">
-      <widget class="QGraphicsView" name="graphicsView_4"/>
+      <widget class="QGraphicsView" name="graphViewSrc4"/>
      </item>
      <item row="0" column="1">
-      <widget class="QGraphicsView" name="graphicsView_3"/>
+      <widget class="QGraphicsView" name="graphViewSrc2"/>
      </item>
      <item row="3" column="0">
-      <widget class="QGraphicsView" name="graphicsView_2"/>
+      <widget class="QGraphicsView" name="graphViewSrc3"/>
      </item>
      <item row="1" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QComboBox" name="comboBox_2"/>
+        <widget class="QComboBox" name="comboSrc2"/>
        </item>
        <item>
         <widget class="QPushButton" name="btnSrc2">
@@ -53,7 +53,7 @@
      <item row="1" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QComboBox" name="comboBox"/>
+        <widget class="QComboBox" name="comboSrc1"/>
        </item>
        <item>
         <widget class="QPushButton" name="btnSrc1">
@@ -67,7 +67,7 @@
      <item row="4" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
-        <widget class="QComboBox" name="comboBox_4"/>
+        <widget class="QComboBox" name="comboSrc3"/>
        </item>
        <item>
         <widget class="QPushButton" name="btnSrc3">
@@ -81,7 +81,7 @@
      <item row="4" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <widget class="QComboBox" name="comboBox_3"/>
+        <widget class="QComboBox" name="comboSrc4"/>
        </item>
        <item>
         <widget class="QPushButton" name="btnSrc4">
@@ -112,7 +112,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_5"/>
+      <widget class="QComboBox" name="comboQuality"/>
      </item>
      <item>
       <widget class="QLabel" name="label">
@@ -125,7 +125,7 @@
       <widget class="QLineEdit" name="lineEdit"/>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="searchBtn">
        <property name="text">
         <string>Buscar</string>
        </property>
@@ -172,7 +172,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="startBtn">
        <property name="text">
         <string>Iniciar</string>
        </property>
